feat: adjusted colors for account creation, new step

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -968,7 +968,7 @@
   "update_available": "Nova actualització disponible",
   "update_beta_available": "Hi ha una nova versió experimental. No es recomana que l'instal·leu llevat de que sapigueu el què esteu fent.",
   "update_blockchain_downloading": "La Cadena de Blocs s'està descarregant, torni a provar quan estigui actualitzada.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Importa el compte existent",
   "update_check": "Actualització de la comprovació",
   "update_contact": "Actualitzar Contacte",
   "update_multiple_available": "Hi ha disponible una versió general i una experimental. No és recomanable que instal·leu la versió experimental llevat que sapigueu el què esteu fent.",
