--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -968,7 +968,7 @@
   "update_available": "Nauja naujina",
   "update_beta_available": "Yra nauja eksperimentinė versija. Tai nėra rekomenduojama įdiegti, jei žinote, ką darote.",
   "update_blockchain_downloading": "Blokai vis dar siunčiasi, patikrinkite dar kartą po to, kai jie atsinaujins.",
-  "update_burst_account": "Atnaujinkite Jūsų Burst sąskaitą",
+  "update_burst_account": "Importuoti esamą sąskaitą",
   "update_check": "Atnaujinimo patikrinimas",
   "update_contact": "Atnaujinti kontaktą",
   "update_multiple_available": "Yra tiek ir pagrindinė, tiek ir eksperimentinė versijos. Nerekomenduojame įdiegti eksperimentinės versijos, nebent jei žinote, ką darote.",
