--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -968,7 +968,7 @@
   "update_available": "Nieuwe update beschikbaar",
   "update_beta_available": "Een nieuwe experimentele versie is nu beschikbaar.  Het is niet aanbevolen dat u dit gaat installeren, tenzij u weet precies wat u doet.",
   "update_blockchain_downloading": "De blockchain is nog steeds het downloaden, controleer opnieuw nadat het up-to-date is.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Bestaand account importeren",
   "update_check": "Update Check",
   "update_contact": "Contactpersoon Bijwerken",
   "update_multiple_available": "Zowel een algemene en experimentele release zijn beschikbaar. Het is niet aanbevolen dat u de experimentele gebruikt als u niet weet wat u doet.",
