--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -968,7 +968,7 @@
   "update_available": "Доступно је ново ажурирање",
   "update_beta_available": "Нова експериментална верзија је доступна. Нине препоручено да је инсталирате уколико не знате шта радите.",
   "update_blockchain_downloading": "Blockchain је још увек у фази учитавања, проверите поново након завршетка процеса.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Увези постојећи налог",
   "update_check": "Ажурирање провера",
   "update_contact": "Ажурирај Контакт",
   "update_multiple_available": "Доступне су обе верзије, основна и експериментална. Није препоручљива инсталација експерименталне верзије уколико нисте сигурни шта радите.",
