--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -968,7 +968,7 @@
   "update_available": "Налице е нова актуализация",
   "update_beta_available": "Нова експериментална версия е достъпна. Не се препоръчва да я инсталирате, освен ако не знаете какво правите.",
   "update_blockchain_downloading": "Блокверигата все още се изтегля, проверете отново след като се актуализира.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Импортирайте съществуващия акаунт",
   "update_check": "Проверка на актуализацията",
   "update_contact": "Актуализиране на контакт",
   "update_multiple_available": "Обща и тестова версия са налични. Не се препоръчва да инсталирате тестова версия, ако не знаете какво правите.",
