--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -968,7 +968,7 @@
   "update_available": "Neues Update verfügbar",
   "update_beta_available": "Eine neue experimentelle Version ist verfügbar. Verwenden Sie diese Version nur, wenn Sie wissen, was Sie tun.",
   "update_blockchain_downloading": "Die Blockchain wird derzeit heruntergeladen. Versuchen Sie es noch einmal, sobald die Blockchain heruntergeladen wurde.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Vorhandenes Konto importieren",
   "update_check": "Update Überprüfung",
   "update_contact": "Kontakt aktualisieren",
   "update_multiple_available": "Es sind sowohl eine stabile als auch eine experimentelle Version verfügbar. Verwenden Sie die experimentelle Version nur, wenn Sie wissen, was Sie tun.",
