--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -968,7 +968,7 @@
   "update_available": "Nova actualización dispoñible",
   "update_beta_available": "Está dispoñible unha nova versión experimental. Non se recomenda a súa instalación se non sabe ben o que se está facendo.",
   "update_blockchain_downloading": "A cadea de bloques aínda se está descarregando, volva a probar cando esté actualizada.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Importar a conta existente",
   "update_check": "Comprobar actualización",
   "update_contact": "Actualizar contacto",
   "update_multiple_available": "Hai unha versión xeral e unha experimental dispoñible. Non se recomenda que instale a versión experimental salvo que saiba o que está facendo.",
