--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -968,7 +968,7 @@
   "update_available": "新しいアップデートがあります",
   "update_beta_available": "新しい試験的リリースが利用可能です。ただあなたが自身が何をやっているか理解していない限り、試験的リリースのインストールは推奨しません。",
   "update_blockchain_downloading": "ブロックチェーンはまだダウンロード中です。最新になってから再度チェックしてください。",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "既存のアカウントをインポートする",
   "update_check": "更新チェック",
   "update_contact": "連絡先を更新",
   "update_multiple_available": "実際のリリースと試験的リリースの両方が可能です。ただあなたが自身が何をやっているか理解していない限り、試験的リリースのインストールは推奨しません。",
