--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -977,7 +977,7 @@
   "update_available": "Nowa aktualizacja dostępna",
   "update_beta_available": "Dostępna jest nowa eksperymentalna wersja oprogramowania. Nie rekomendowana jest instalacja chyba że wiesz co robisz.",
   "update_blockchain_downloading": "Blockchain jest jeszcze pobierane, sprawdź później gdy pobieranie się zakończy.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Zaimportuj istniejące konto",
   "update_check": "Aktualizuj czek",
   "update_contact": "Uaktualnij kontakt",
   "update_multiple_available": "Dostępne są nowe wersje oprogramowania, eksperymentalna i normalna. Nie rekomendowana jest instalacja wersji eksperymentalnej chyba że wiesz co robisz.",
