--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -972,7 +972,7 @@
   "update_available": "Nova atualização disponível",
   "update_beta_available": "Uma nova versão experimental está disponível. Não é recomendável que você a instale a não ser que você saiba o que está fazendo.",
   "update_blockchain_downloading": "A corrente de blocos ainda está sendo baixada, verifique novamente após estar atualizada.",
-  "update_burst_account": "Update your Burst account",
+  "update_burst_account": "Importar conta existente",
   "update_check": "Verificar atualização",
   "update_contact": "Atualizar o contato",
   "update_multiple_available": "Tanto a versão geral como a experimental estão disponíveis. Não é recomendável que você instale a versão experimental, a menos que você saiba o que está fazendo.",
