--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -968,7 +968,7 @@
   "update_available": "Доступне нове оновлення",
   "update_beta_available": "Новий експериментальний випуск доступний. Не рекомендується, встановлювати його, якщо ви не знаєте, що ви робите.",
   "update_blockchain_downloading": "Blockchain ще завантажується, перевірте ще раз після того, як він оновиться.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Імпортуйте наявний рахунок",
   "update_check": "Перевірка оновлення",
   "update_contact": "Оновлення контакту",
   "update_multiple_available": "Доступні як основний, так і експериментальний випуски. Не рекомендується встановлювати експериментальний випуск, якщо ви не знаєте, що ви робите.",
